<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <!-- Email Input -->
    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_email" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints="@string/enter_email"
        android:backgroundTint="@color/teal"
        android:inputType="textEmailAddress"
        android:labelFor="@id/emailLabel"
        android:padding="12dp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <!-- Password Input -->
    <TextView
        android:id="@+id/emailPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints="@string/enter_password"
        android:backgroundTint="@color/teal"
        android:inputType="textPassword"
        android:labelFor="@id/emailPass"
        android:padding="12dp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <!-- Register Button -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:backgroundTint="@color/purple"
        android:layout_marginTop="16dp" />

</LinearLayout>
